--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ vignettes/*.pdf
 
 # RSConect
 rsconnect
+
+# Ignore eGRID historical files (1996-2016) (ZIP)
+/*/egrid2018_historical_files_since_1996
