--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ rsconnect
 
 # Ignore eGRID historical files (1996-2016) (ZIP)
 /*/egrid2018_historical_files_since_1996
+
+# Ignore Invisable .xlsx files
+~$egrid2018_data_v2_B.xlsx
